# nobrainer

./: .autorc  .coveragerc  .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION  CLAUDE.md  Dockerfile  Dockerfile.gpu  LICENSE  MANIFEST.in  Makefile  README.md  Singularity  conftest.py  predict.py  pyproject.toml  requirements.txt  run_singularity.sh  setup.cfg  setup.py  tox.ini  train.py  train_on_hdf5.py  train_on_hdf5_test.py  train_on_volumes.py  train_on_volumes_test.py  versioneer.py  vols2hdf5.py  vols2hdf5_test.py  workflow.sh
.circleci/: config.yml
.github/: EC2_GPU_RUNNER.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  maintenance.md  question.md
.github/workflows/: ci.yml  destroy_runner.sh  guide-notebooks-ec2.yml  guide-notebooks-om.yml  guide-notebooks-slurm.yml  guide-notebooks.yml  hello.yml  keepalive.yaml  kwyk-reproduction-ec2.yml  lint.yml  provision_runner.sh  publish.yml  pythonpackage.yml  release.yml  validate-book.yml
Dockerfile/: Dockerfile
WIP-self-supervised/: README.md
WIP-self-supervised/byol-2d/: byol_2d.ipynb  byol_2d.py
WIP-self-supervised/simsiam-2d/: simsiam_2d.ipynb  simsiam_2d.py
brain_mask_extraction_model/: final_model.pth
brain_mask_extraction_model/checkpoints/: best_model.pth
brainbox_downloader/: data_grabber.py  metasearch_to_hdf5.py  metasearch_to_niftis.py  run_meta_to_hdf5.sh  run_meta_to_niftis.sh  utils.py
data/: meshnet-brainmask-toy.pth  unet-brainmask-toy.pth
docker/: Dockerfile  README.md  _build_and_push.sh  big.Dockerfile  cpu-jupyter.Dockerfile  cpu.Dockerfile  gpu-jupyter.Dockerfile  gpu.Dockerfile
docker/hooks/: build  pre_build
examples/: README.md  mwe.py  mwe2.py
examples/brain-extraction-cli/: README.md  evaluation_data.csv
examples/brain-extraction-python/: features_labels.csv  predict.py  save.py  train.py
examples/brain-labelling-cli/: 50-class-mapping.csv  README.md
guide/: 01-getting_started.ipynb  01_getting_started.py  02-preparing_training_data.ipynb  02-train_on_tpu.ipynb  02_train_segmentation.py  03-api_train_binary_segmentation.ipynb  03-train_binary_segmentation.ipynb  03-variational_weights.ipynb  03_bayesian_uncertainty.py  04-api_train_generation_progressive.ipynb  04-train_on_multiple_gpus.ipynb  04_brain_generation.py  05-train_on_tpu.ipynb  05_advanced_segmentation.py  06-variational_weights.ipynb  06_advanced_data_pipeline.py  Inference_with_kwyk_model.ipynb  _run_tests.sh  api_train_binary_segmentation.ipynb  api_train_generation_progressive.ipynb  data_augmentation.md  inference_with_kwyk_model.ipynb  simsiam_brain_demo.ipynb  train_autoencoder.ipynb  train_binary_classification.ipynb  train_binary_segmentation.ipynb  train_generation_progressive.ipynb  train_on_multiple_gpus.ipynb  train_on_tpu.ipynb  training_with_augmentations.ipynb  transfer_learning-bayesian.ipynb  transfer_learning.ipynb  variational_weights.ipynb
metasearch_to_hdf5/: data_grabber.py  metasearch_to_hdf5.py  run_meta_to_hdf5.sh  utils.py
niftynet_to_keras/: highres3dnet.ipynb  highres3dnet.py  run_train.sh  train.py
nobrainer/: __init__.py  __main__.py  __version__.py  _version.py  bayesian_utils.py  brainsiam_train.py  cli.py  cli_test.py  dataset.py  experiment.py  gpu.py  intensity_transforms.py  io.py  io_test.py  losses.py  losses_test.py  medium.npy  metrics.py  metrics_test.py  predict.py  prediction.py  preprocessing.py  preprocessing_test.py  scores.py  slurm.py  spatial_transforms.py  strong.npy  test_intensity_transforms.py  test_spatial_transforms.py  testing.py  tfrecord.py  train.py  training.py  transform.py  util.py  util_test.py  utils.py  validate.py  validation.py  volume.py  (+2 more)
nobrainer/api/: segmentation.py
nobrainer/augmentation/: __init__.py  profiles.py  synthseg.py  transforms.py
nobrainer/cli/: main.py
nobrainer/consolidations/: dwc.py
nobrainer/data/: __init__.py  spec.py  tissue_classes.py
nobrainer/datasets/: __init__.py  openneuro.py  zarr_store.py
nobrainer/distrubuted_learning/: dwc.py
nobrainer/highres3dnet/: highres3dnet.ipynb  run_train.sh  train.py
nobrainer/layers/: Conv_v.py  DepthwiseConv3d.py  InstanceNorm.py  __init__.py  bernoulli_dropout.py  concrete_dropout.py  dropout.py  gaussian_dropout.py  groupnorm.py  max_pool4d.py  maxpool4d.py  padding.py  variational_convolution.py
nobrainer/models/: [wip]_simsiam_brain.py  __init__.py  _constants.py  _utils.py  asdnet.py  attention_unet.py  attention_unet_with_inception.py  autoencoder.py  bayesian-meshnet.py  bayesian.py  bayesian_meshnet.py  bayesian_vnet.py  bayesian_vnet_semi.py  brainsiam.py  convnext.py  dcgan.py  highres3dnet.py  highres3dnet_test.py  highres3dnet_tf.py  highresnet.py  lab2im_model.py  labels_to_image_model.py  meshnet.py  meshnet_test.py  meshnetvwn.py  meshnetwn.py  meshnetwn_old.py  nnUNet.py  progressiveae.py  progressivegan.py  progressivegan_v2.py  quicknat.py  segformer3d.py  segmentation.py  simsiam.py  simsiam_brain.py  unet.py  unet2d.py  unet3d.py  unet_lstm.py  (+7 more)
nobrainer/pipeline/: Segmentation.py
nobrainer/processing/: __init__.py  base.py  brain_generator.py  checkpoint.py  croissant.py  dataset.py  generation.py  image_generator.py  segmentation.py
nobrainer/qc/: __init__.py  corrupt.py  corruption_configs.py  evaluate.py  gate.py  metrics.py  preference.py  slice_extractor.py
nobrainer/research/: __init__.py  loop.py
nobrainer/sr-tests/: conftest.py  test_bayesian_uncertainty.py  test_brain_generation.py  test_croissant_metadata.py  test_dataset_builder.py  test_extract_patches.py  test_kwyk_smoke.py  test_progressive_gan.py  test_raw_pytorch_api.py  test_segmentation_estimator.py  (+3 more)
outputs/: pac_2530_orig.nii_dice.npy  pac_2535_orig.nii_dice.npy  pac_2547_orig.nii_dice.npy  pac_2560_orig.nii_dice.npy  pac_2581_orig.nii_dice.npy  pac_2582_orig.nii_dice.npy  pac_2589_orig.nii_dice.npy
using_pretrained_models/: README.md  vgg16.ipynb
util/: ci.Singularity  run-in-env.sh  singularity-exec-in-env.sh
(+182 files in other folders)
