[build-system]
# Setuptools version should match setup.py; wheel because pip will insert it noisily
requires = ["setuptools >= 38.3.0", "wheel"]
build-backend = 'setuptools.build_meta'

[tool.black]
exclude='\.eggs|\.git|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist|_version\.py|versioneer\.py'

[tool.isort]
profile = "black"
force_sort_within_sections = true
reverse_relative = true
sort_relative_in_force_sorted_sections = true
known_first_party = ["nobrainer"]
