[metadata]
name = nobrainer
url = https://github.com/kaczmarj/nobrainer
author = Nobrainer Developers
author_email = jakub.kaczmarzyk@gmail.com
description = A framework for developing neural network models for 3D image processing.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, 2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >= 3.7
install_requires =
    click
    nibabel
    numpy
    scikit-image
    tensorflow-probability >= 0.11.0
    tensorflow >= 2.4.0

[options.entry_points]
console_scripts =
    nobrainer = nobrainer.cli.main:cli

[options.extras_require]
dev =
    pre-commit
    pytest-cov
    scipy

[tool:pytest]
addopts = --verbose --cov=nobrainer --cov-config=setup.cfg

[coverage:run]
branch = True
omit =
  nobrainer/_version.py
  */tests*

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
ignore_errors = True

[flake8]
max-line-length = 100
exclude =
    .git/
    __pycache__/
    build/
    dist/
    versioneer.py
    _version.py
ignore =
    E203
    W503

[versioneer]
VCS = git
style = pep440
versionfile_source = nobrainer/_version.py
versionfile_build = nobrainer/_version.py
tag_prefix =
parentdir_prefix =

[codespell]
skip = nobrainer/_version.py,versioneer.py
# Don't warn about "[l]ist" in the abbrev_prompt() docstring:
ignore-regex = \[\w\]\w+
