[metadata]
name = nobrainer
url = https://neuronets.github.io
author = Nobrainer Developers
author_email = jakub.kaczmarzyk@gmail.com
description = A framework for developing neural network models for 3D image processing.
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache License, 2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source Code = https://github.com/neuronets/nobrainer

[options]
python_requires = >= 3.13
install_requires =
    click
    fsspec
    joblib
    nibabel >= 5.0
    numpy
    scikit-image
    torch >= 2.0
    monai >= 1.3
    h5py >= 3.9
    tfrecord >= 1.14
    einops >= 0.7
    psutil
zip_safe = False
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    nobrainer=nobrainer.cli.main:cli

[options.extras_require]
bayesian =
    pyro-ppl >= 1.9
generative =
    pytorch-lightning >= 2.0
lightning =
    pytorch-lightning >= 2.0
zarr =
    zarr >= 3.0
    nifti-zarr
    scipy >= 1.11
versioning =
    datalad >= 0.19
dev =
    pre-commit
    pytest
    pytest-cov
    scipy

[tool:pytest]
addopts = --verbose --cov=nobrainer --cov-config=setup.cfg

[coverage:run]
branch = True
omit =
  nobrainer/_version.py
  */tests*

[coverage:report]
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
ignore_errors = True

[flake8]
max-line-length = 100
exclude =
    .git/
    __pycache__/
    build/
    dist/
    versioneer.py
    _version.py
    guide/
ignore =
    E203
    W503

[versioneer]
VCS = git
style = pep440
versionfile_source = nobrainer/_version.py
versionfile_build = nobrainer/_version.py
tag_prefix =
parentdir_prefix =

[codespell]
skip = nobrainer/_version.py,versioneer.py
# Don't warn about "[l]ist" in the abbrev_prompt() docstring:
ignore-regex = \[\w\]\w+
